fixing menu bugs: missing background color, overflow changed from hidden to auto;

--- a/themes/annual-report/scss/site/_filtermenu.scss
+++ b/themes/annual-report/scss/site/_filtermenu.scss
@@ -20,17 +20,12 @@
 	}
 }
 .menu {
+	background-color: #000;
 	-webkit-box-shadow: 0 4px 5px rgba(0,0,0,.5);
 	-moz-box-shadow: 0 4px 5px rgba(0,0,0,.5);
 	box-shadow: 0 4px 5px rgba(0,0,0,.5);
-	@media screen and (min-width: $break-large) {
-		position: relative;
-		top: 0;
-		left: 0;
-		width: 100%;
-		z-index: 1000;
-		box-shadow: none;
-	}
+	position: relative;
+	z-index: 1000;
 	@media screen and (min-width: $break-large) {
 		@include gradient($color: #333, $start-color: #333, $end-color: #000);
 		-webkit-box-shadow: 3px 0 3px rgba(0,0,0,.15);
